# sigrok-sys

./: Cargo.toml  README.md  build.rs
include/: glib.h  libsigrok.h
src/: lib.rs
