[package]
name = "sigrok-sys"
version = "0.2.0"
authors = ["Tim Ryan <id@timryan.org>"]
description = "Bindings for libsigrok"
license = "GPL-3.0"
repository = "https://github.com/tcr/sigrok-sys.git"
homepage = "https://github.com/tcr/sigrok-sys.git"
build = "build.rs"

[dependencies]
glib-sys = "0.3.0"

[build-dependencies]
pkg-config = "0.3.6"
